--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <a class="anchor-button" target="_blank" href="https://www.facebook.com/md.mashrulislam.shimanto.3">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/me.jpg" alt="">
+            <img src="images/me1.png" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/me.jpg" alt="">
+            <img src="images/me2.png" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
