--- a/index.html
+++ b/index.html
@@ -33,17 +33,34 @@
         </div>
     </section>
     <section class="experience-area">
-        <h2>Experiences</h2>
-        <div class="half-width" id="full-stack">
-            <h2>Full Stack Web Developer</h2>
+        <h2>Experience</h2>
+        <div class="exp" id="full-stack">
+            <img class="exp-img" src="images/work-1.png">
+            <h2>Full Stack Web-Developer</h2>
             <h3>2021-Present | Pro Level Developer</h3>
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div class="half-width" id="baby-web">
-            <h2>Baby Web Developer</h2>
+        <div class="exp" id="baby-web">
+            <img class="exp-img" src="images/work-2.jpg">
+            <h2>Creative Web-Designer</h2>
             <h3>2020-2021 | Programming Hero Learner</h3>
             <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
+        <div class="exp" id="baby-web1">
+            <img class="exp-img" src="images/work-3.jpg">
+            <h2>Full Responsive Website Creation </h2>
+            <h3>2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <section class="testimonial">
+        <h1 id="wcs">What clients Say</h1>
+        <h1 id="client">Jhon Doe</h1>
+        <h3 id="review">Oh! keep me out of it... don't even know this guy!!!!</h3>
+    </section>
+    <section id="massagebox">
+        <h3 id="msg1">Leave me a massage in</h3>
+        <h1  id="msg2">md.mashrulislam@gmail.com</h1>
     </section>
     <footer>
         <p>© Md. Mashrul Islam 2021, a Programming Hero Student.</p>
